--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Chat"
+name = "chat"
 version = "0.1.0"
 authors = ["Kerndog73 <kerndog73@gmail.com>"]
 edition = "2018"
@@ -7,3 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "0.2", features = ["full"] }
+warp = "0.2"
+log = "0.4"
+pretty_env_logger = "0.4"
+
+[profile.release]
+lto = true
