--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ tokio = { version = "0.2", features = ["full"] }
 warp = "0.2"
 log = "0.4"
 pretty_env_logger = "0.4"
+askama = "0.10"
+askama_warp = "0.10" #{ version = "0.10", features = ["with-warp"] }
 
 [profile.release]
 lto = true
