--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,11 @@ log = "0.4"
 pretty_env_logger = "0.4"
 askama = "0.10"
 askama_warp = "0.10"
+# Using tokio-postgress 0.5 because it uses tokio 0.2.
+# Later versions have switched to tokio 0.3 but
+# warp is not compatible with tokio 0.3
+tokio-postgres = "0.5"
+deadpool-postgres = "0.5"
 
 [profile.release]
 lto = true
