--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,12 @@ askama_warp = "0.10"
 # Using tokio-postgress 0.5 because it uses tokio 0.2.
 # Later versions have switched to tokio 0.3 but
 # warp is not compatible with tokio 0.3
-tokio-postgres = "0.5"
-deadpool-postgres = "0.5"
+tokio-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
+deadpool-postgres = { version = "0.5" }
+serde = { version = "1.0", features = ["derive"] }
+
+# I'm considering using rocket due to the amount of boilerplate required to
+# get the database working.
 
 [profile.release]
 lto = true
