--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 tokio = { version = "0.2", features = ["full"] }
-warp = "0.2"
+warp = { version = "0.2", features = ["tls"] }
 log = "0.4"
 pretty_env_logger = "0.4"
 askama = "0.10"
