Start working on authentication
Or is it authorization?

I'm going to use "Sign in with Google" for creating and logging into accounts. It makes the process as simple as possible for users.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ deadpool-postgres = { version = "0.5" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures = "0.3"
+reqwest = { version = "0.10", features = ["json"] }
 
 # I'm considering using rocket due to the amount of boilerplate required to
 # get the database working.
