--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures = "0.3"
 reqwest = { version = "0.10", features = ["json"] }
+jsonwebtoken = "7.2"
+headers = "0.3"
 
 # I'm considering using rocket due to the amount of boilerplate required to
 # get the database working.
