--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ reqwest = { version = "0.10", features = ["json"] }
 jsonwebtoken = "7.2"
 headers = "0.3"
 rand = "0.7"
+form_urlencoded = "1"
 
 # I'm considering using rocket due to the amount of boilerplate required to
 # get the database working.
