--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build-prod": "vue-cli-service build --mode production --modern"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
@@ -14,6 +15,8 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "raw-loader": "^4.0.2"
+    "raw-loader": "^4.0.2",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0"
   }
 }
