--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ headers = "0.3"
 rand = "0.7"
 form_urlencoded = "1"
 lexical-core = "0"
+bytes = "0.5"
+oxipng = "4"
 
 [profile.release]
 lto = true
