--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "chat"
 version = "0.1.0"
-authors = ["Kerndog73 <kerndog73@gmail.com>"]
+authors = ["Indiana Kernick <indiana.kernick@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
